--- a/ademir/.htaccess
+++ b/ademir/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
-AuthName "Authentication Required"
+AuthName "Somente autores de resumos!"
 AuthUserFile "/etc/htpasswd/.htpasswd_resumeiro"
 Require valid-user
