--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 RewriteEngine on
-RewriteRule resumo/(.*) resumo.php?f=$1
-RewriteRule materia/(.*) materia.php?mat=$1
+RewriteRule ano/(.*) ano.php?ano=$1
+RewriteRule materia/(.*)-(.*) materia.php?mat=$1&ano=$2
+RewriteRule resumo/(.*) resumo.php?mini=$1
+RewriteRule imprimir/(.*) imprimir.php?mini=$1
